--- a/litebm/200.html
+++ b/litebm/200.html
@@ -1,1 +1,28 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,minimal-ui"/><meta name="theme-color" content="#000000"><title>Online betting from Betmaster. Bets on Soccer.</title><meta name="description" content="Betmaster specializes in betting on football for beginners and experienced players. Bookmaker offers its clients a number of unique conditions: simplified registration without presenting of documents and instant withdrawal on demand."/><meta name="application-name" content="Betmaster"/><meta name="theme-color" content="#404765"/><meta itemprop="name" content="Betmaster"/><meta itemprop="description" content="Betting reinvented"/><meta itemprop="image" content="https://bmstatic.cloud/betmaster/img/512.jpg"/><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"><link href="/static/css/main.ef9e7e45.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.2cbc20e5.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,minimal-ui" />
+  <meta name="theme-color" content="#000000">
+  <title>Online betting from Betmaster. Bets on Soccer.</title>
+  <meta name="description" content="Betmaster specializes in betting on football for beginners and experienced players. Bookmaker offers its clients a number of unique conditions: simplified registration without presenting of documents and instant withdrawal on demand."
+  />
+  <meta name="application-name" content="Betmaster" />
+  <meta name="theme-color" content="#404765" />
+  <meta itemprop="name" content="Betmaster" />
+  <meta itemprop="description" content="Betting reinvented" />
+  <meta itemprop="image" content="https://bmstatic.cloud/betmaster/img/512.jpg" />
+  <link rel="manifest" href="/litebm/manifest.json">
+  <link rel="shortcut icon" href="/litebm/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="/litebm/static/css/main.e5a44434.css" rel="stylesheet">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="text/javascript" src="/litebm/static/js/main.c4e57ea3.js"></script>
+</body>
+
+</html>
