--- a/index.html
+++ b/index.html
@@ -1,186 +1,67 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html data-n-head="" data-n-head-ssr>
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Dmydry.GitHub.io : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Dmydry.GitHub.io</title>
+    <meta data-n-head="true" charset="utf-8"><meta data-n-head="true" content="width=device-width,initial-scale=1" name="viewport"><meta data-n-head="true" content="Dmitriy Gurinenko CV" name="description" data-hid="description"><title data-n-head="true">Dmitriy Gurinenko | Frontend developer | React, Vue</title><link href="/favicon.ico" rel="icon" data-n-head="true" type="image/x-icon"><link href="/_nuxt/manifest.8492a8edb8a4fac08f56.js" rel="preload" as="script"><link href="/_nuxt/vendor.0cb6c030cbf371752ee4.js" rel="preload" as="script"><link href="/_nuxt/app.376db6c1aa2917c7ea83.js" rel="preload" as="script"><link href="/_nuxt/layouts/default.8d687e73f2b8f4ac7f7b.js" rel="preload" as="script"><link href="/_nuxt/pages/index.76aed148ff8d40b4d2a8.js" rel="preload" as="script"><style data-vue-ssr-id="1cc0e088:0">.nuxt-progress{position:fixed;top:0;left:0;right:0;height:2px;width:0;-webkit-transition:width .2s,opacity .4s;transition:width .2s,opacity .4s;opacity:1;background-color:#efc14e;z-index:999999}</style><style data-vue-ssr-id="6e85646a:0">html{font-family:Quicksand,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;font-size:16px;word-spacing:1px;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;background-color:#35495e}*,:after,:before,html{-webkit-box-sizing:border-box;box-sizing:border-box}*,:after,:before{margin:0}a{text-decoration:none;color:inherit}</style><style data-vue-ssr-id="11c5d612:0">.container{min-height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-align:center;color:#fff;padding:20px}.title{display:block;font-weight:300;font-size:3.5em;padding:10px 0}.subtitle{font-weight:500;font-size:1.5em;padding:10px 0}.subtitle-sm{font-style:italic;padding:10px 0}.text{padding:10px 0;font-size:1em;text-align:left;line-height:1.4em}.text-title{text-decoration:underline}.pre-name{background-color:#002b36;color:#2aa198;line-height:22px;font-weight:500}.footer,.pre-name{width:100%;padding:30px}.footer{background-color:#141c2f;color:#fff;text-align:right}</style>
   </head>
+  <body data-n-head="">
+    <div id="__nuxt" data-server-rendered="true"><div class="nuxt-progress" style="width:0%;height:2px;background-color:#3b8070;opacity:0"></div><div id="__layout"><div><div><section class="container"><div><h1 class="title">
+        Dmitriy Gurinenko
+      </h1><div class="subtitle">
+        Frontend developer / QA engineer
+      </div><div class="subtitle-sm">
+        Ukraine - Indonesia - Montenegro - Estonia <br>
+        +380 63 1105252 / dmitriy.gurinenko@gmail.com <br></div><div class="text">
+        IT Specialist: 8 years <br>
+        COO of IT Company: 4 years<br>
+        Entrepreneur: 4 years <br>
+        Frontend developer and QA engineer: 2 years
+      </div><div class="text"><span class="text-title">Programming</span><br>
+        Javascript: ES6/ES7, Node, Express, React, Redux, Vue, Nuxt, Webpack, Mongo, Moment, Babel, Puppeteer<br><br><span class="text-title">System administration</span><br>
+        OS: Linux, Centos, FreeBSD, Gentoo Linux, Ubuntu, Microsoft Windows Server<br>
+        Virtualisation: VMWare, Vbox<br>
+        Databases: MySQL, PostgreSQL<br>
+        Web/Mail: Tomcat, LAMP, Apache, Nginx, IIS, Sendmail, QMail, Postfix, Courier IMAP, POP3<br>
+        Network Services: ISP Software, SSH, DNS/BIND, NFS, NIS, Samba, rsync, rdist, DHCP, Telnet, FTP<br>
+        Hardware: HP, IBM, Cisco<br><br><span class="text-title">￼￼￼￼Operational management</span><br>
+        ­Strategic development B2C, B2B<br>
+        Marketing and promotional campaigns<br>
+        ­Financial forecasting and analysis<br>
+        ­Development and implementation of KPI system<br>
+        ­Optimization of organizational structure and management<br><br><span class="subtitle">Professional Experience:</span><br><br><span class="text-title">Betmaster</span><br>
+        https://betmaster.com<br>
+        Frontend developer<br>
+        Montenegro - Estonia<br>
+        August 2017 - Present<br><br><span class="text-title">Kindbeetle</span><br>
+        http://kindbeetle.ru/<br>
+        QA engineer<br>
+        Indonesia, Bali<br>
+        April 2016 - August 2017<br><ul><li>￼￼￼￼Kinbeetle Automation API development (company's own framework for human readable tests)<li>Full cycle automation selenium web tests development<li>Full cycle automation appium mobile (ios & android) tests development<li>Continious cloud integration (browserstack, saucelabs)<li>Projects frontend minor bug fixes and improvements (React / React­native)</ul><br><span class="text-title">BikeHouse Bali</span><br>
+        https://balibikehouse.com/<br>
+        Co founder / CEO<br>
+        Indonesia, Bali<br>
+        November 2014 - Present<br><ul><li>￼￼￼￼Business processes development<li>Marketing<li>Website development<li>Workflow control<li>Customer relationships</ul><br><span class="text-title">Innovative Solutions</span><br>
+        http://innovativesolutions.com.ua/<br>
+        COO<br>
+        Ukraine, Kiev<br>
+        April 2011 - August 2014<br><ul><li>￼￼￼Control main company activities<li>Management of heads of 8 departments (Sales, Development, Support, Global marketing, PR, HR)<li>Operational document flow<li>Financial analytics and forecasting<li>Development and implementation of new sales strategies, technologies, business models<li>Management of new remote educational project<li>Constant work with key partners</ul><br><span class="text-title">Innovative Solutions</span><br>
+        http://innovativesolutions.com.ua/<br>
+        Co founder / System Administrator<br>
+        Ukraine, Kiev<br>
+        February 2010 - April 2011<br><ul><li>Company servers setup and maintain Corporate website development<li>Main partners and customers relationships Technical tasks flow for remote workers<li>Control and evaluation produced web applications</ul><br><span class="text-title">RCS Components</span><br>
+        http://www.rcscomponents.kiev.ua/<br>
+        Vice Head of Integration Services<br>
+        Ukraine, Kiev<br>
+        June 2009 - February 2010<br><ul><li>Development web integration services for main partners Support and installation of GPS monitoring equipment<li>Management of technical support team<li>Analysis of tracking data flow<li>Analysis of support ticket system Complex reports of support department</ul><br><span class="text-title">RCS Components</span><br>
+        http://www.rcscomponents.kiev.ua/<br>
+        System Administrator<br>
+        Ukraine, Kiev<br>
+        March 2006 - June 2009<br><ul><li>Support and maintain corporate network Active Directory, Network equipment (Cisco)<li>Corporate Security<li>3 Remote offices VPN Corporate Servers (HP, IBM)<li>Corporate Websites</ul><br><span class="subtitle">Education:</span><br><br>
+        ECOMAN University<br>
+        http://ecoman­university.kiev.ua/<br>
+        Ukraine, Kiev 2009<br>
+        Master's Degree in Business Management and Administration<br></div></div></section><div class="pre-name">
+    01000100 01101101 01101001 01110100 01110010 01101001 01111001 01000111 01110101 01110010 01101001 01101110 01100101 01101110 01101011 01101111
+  </div><div class="footer">
+    © 2018 <a href="https://github.com/dmydry">dmydry</a></div></div></div></div></div><script type="text/javascript">window.__NUXT__={layout:"default",data:[{}],error:null,serverRendered:!0}</script><script defer src="/_nuxt/manifest.8492a8edb8a4fac08f56.js"></script><script defer src="/_nuxt/layouts/default.8d687e73f2b8f4ac7f7b.js"></script><script defer src="/_nuxt/pages/index.76aed148ff8d40b4d2a8.js"></script><script defer src="/_nuxt/vendor.0cb6c030cbf371752ee4.js"></script><script defer src="/_nuxt/app.376db6c1aa2917c7ea83.js"></script>
+  
 
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/dmydry">View on GitHub</a>
-
-          <h1 id="project_title">Dmydry.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="dmitriy-gurinenko" class="anchor" href="#dmitriy-gurinenko" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>DMITRIY GURINENKO</h1>
-
-<p><em>Ukraine - Indonesia<br>
-(+62)8123­99­44­308 / <a href="mailto:dmitriy.gurinenko@gmail.com">dmitriy.gurinenko@gmail.com</a></em><br>
-<em>IT Specialist with over 4 years of experience, COO of IT Company ­ 4 year, Entrepreneur ­ 2 ​ year, QA engineer ­ 6 month</em></p>
-
-<h2>
-<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills:</h2>
-
-<h3>
-<a id="programming" class="anchor" href="#programming" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Programming:</h3>
-
-<ul>
-<li>Javascript: ES6/ES7, Node.js, Express.js, React.js, React­Native, webpack, Q, Passport, Bootstrap, Lodash, jQuery, AJAX, Redux, Mongo, Moment, Babel, ESLint, Mocha, Power assert, Istanbul, Selenium, Webdriver.io, Postgresql, Redis, RabbitMQ, Saucelabs, Browserstack.</li>
-</ul>
-
-<h3>
-<a id="system-administration" class="anchor" href="#system-administration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>System administration:</h3>
-
-<ul>
-<li>OS: Linux, Centos, FreeBSD, Gentoo Linux, Ubuntu, Microsoft Windows Server.</li>
-<li>Virtualisation: VMWare, Vbox.</li>
-<li>Databases: MySQL, PostgreSQL</li>
-<li>Web/Mail: Tomcat, LAMP, Apache, Nginx, IIS, Sendmail, QMail, Postfix, Courier IMAP, POP3.</li>
-<li>Network Services: ISP Software, SSH, DNS/BIND, NFS, NIS, Samba, rsync, rdist, DHCP, Telnet, FTP.</li>
-<li>Hardware: HP, IBM, Cisco</li>
-</ul>
-
-<h3>
-<a id="operational-management" class="anchor" href="#operational-management" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>￼￼￼￼Operational management:</h3>
-
-<ul>
-<li>­Strategic development B2C, B2B</li>
-<li>Marketing and promotional campaigns</li>
-<li>­Financial forecasting and analysis</li>
-<li>­Development and implementation of KPI system</li>
-<li>­Optimization of organizational structure and management</li>
-</ul>
-
-<h2>
-<a id="professional-experience" class="anchor" href="#professional-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Professional Experience:</h2>
-
-<p><strong>Kindbeetle</strong><br>
-<a href="http://kindbeetle.ru/">http://kindbeetle.ru/</a><br>
-Automation QA engineer<br>
-Indonesia, Bali<br>
-April 2016 - Present</p>
-
-<ul>
-<li>￼￼￼￼Kinbeetle Automation API development (company's own framework for human readable tests)</li>
-<li>Full cycle automation selenium web tests development</li>
-<li>Full cycle automation appium mobile (ios &amp; android) tests development</li>
-<li>Continious cloud integration (browserstack, saucelabs)</li>
-<li>Projects frontend minor bug fixes and improvements (React / React­native)<br>
-</li>
-</ul>
-
-<p><strong>BikeHouse Bali</strong><br>
-<a href="http://balibikehouse.com/">http://balibikehouse.com/</a><br>
-Co founder / CEO<br>
-Indonesia, Bali<br>
-November 2014 - April 2016</p>
-
-<ul>
-<li>Business processes development Marketing</li>
-<li>Website development</li>
-<li>Workflow control</li>
-<li>Customer relationships<br>
-</li>
-</ul>
-
-<p><strong>Innovative Solutions</strong><br>
-<a href="http://innovativesolutions.com.ua/">http://innovativesolutions.com.ua/</a><br>
-COO<br>
-Ukraine, Kiev<br>
-April 2011  - August 2014</p>
-
-<ul>
-<li>￼￼￼Control main company activities</li>
-<li>Management of heads of 8 departments (Sales, Development, Support, Global marketing, PR, HR)</li>
-<li>Operational document flow</li>
-<li>Financial analytics and forecasting</li>
-<li>Development and implementation of new sales strategies, technologies, business models</li>
-<li>Management of new remote educational project</li>
-<li>Constant work with key partners<br>
-</li>
-</ul>
-
-<p><strong>￼Innovative Solutions</strong><br>
-<a href="http://innovativesolutions.com.ua/">http://innovativesolutions.com.ua/</a><br>
-Co founder / System Administrator<br>
-Ukraine, Kiev<br>
-February 2010 - April 2011</p>
-
-<ul>
-<li>Company servers setup and maintain Corporate website development</li>
-<li>Main partners and customers relationships Technical tasks flow for remote workers</li>
-<li>Control and evaluation produced web applications<br>
-</li>
-</ul>
-
-<p><strong>RCS Components</strong><br>
-<a href="http://www.rcscomponents.kiev.ua/">http://www.rcscomponents.kiev.ua/</a><br>
-Vice Head of Integration Services<br>
-Ukraine, Kiev<br>
-June 2009 - February 2010</p>
-
-<ul>
-<li>Development web integration services for main partners Support and installation of GPS monitoring equipment</li>
-<li>Management of technical support team</li>
-<li>Analysis of tracking data flow</li>
-<li>Analysis of support ticket system Complex reports of support department<br>
-</li>
-</ul>
-
-<p><strong>RCS Components</strong><br>
-<a href="http://www.rcscomponents.kiev.ua/">http://www.rcscomponents.kiev.ua/</a><br>
-System Administrator<br>
-Ukraine, Kiev<br>
-March 2006 - June 2009</p>
-
-<ul>
-<li>Support and maintain:</li>
-<li>Over 100 units corporate network Active Directory<br>
-</li>
-<li>Network equipment (Cisco)<br>
-</li>
-<li>Corporate Security<br>
-</li>
-<li>3 Remote offices VPN Corporate Servers (HP, IBM)<br>
-</li>
-<li>Corporate Websites<br>
-</li>
-</ul>
-
-<h2>
-<a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education:</h2>
-
-<p><strong>ECOMAN University</strong><br>
-http://ecoman­university.kiev.ua/<br>
-Ukraine, Kiev 2009<br>
-Master's Degree in Business Management and Administration  </p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
