header photo and translate binary button

--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!doctype html>
-<html data-n-head="" data-n-head-ssr>
+<html data-n-head-ssr data-n-head="">
   <head>
-    <meta data-n-head="true" charset="utf-8"><meta data-n-head="true" content="width=device-width,initial-scale=1" name="viewport"><meta data-n-head="true" content="Dmitriy Gurinenko CV" name="description" data-hid="description"><title data-n-head="true">Dmitriy Gurinenko | Frontend developer | React, Vue</title><link href="/favicon.ico" rel="icon" data-n-head="true" type="image/x-icon"><link href="/_nuxt/manifest.d40384a9762d0ab45720.js" rel="preload" as="script"><link href="/_nuxt/vendor.0cb6c030cbf371752ee4.js" rel="preload" as="script"><link href="/_nuxt/app.376db6c1aa2917c7ea83.js" rel="preload" as="script"><link href="/_nuxt/layouts/default.8d687e73f2b8f4ac7f7b.js" rel="preload" as="script"><link href="/_nuxt/pages/index.0695042a9fb7a143a037.js" rel="preload" as="script"><style data-vue-ssr-id="1cc0e088:0">.nuxt-progress{position:fixed;top:0;left:0;right:0;height:2px;width:0;-webkit-transition:width .2s,opacity .4s;transition:width .2s,opacity .4s;opacity:1;background-color:#efc14e;z-index:999999}</style><style data-vue-ssr-id="6e85646a:0">html{font-family:Quicksand,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;font-size:16px;word-spacing:1px;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;background-color:#35495e}*,:after,:before,html{-webkit-box-sizing:border-box;box-sizing:border-box}*,:after,:before{margin:0}a{text-decoration:none;color:inherit}</style><style data-vue-ssr-id="11c5d612:0">.container{min-height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-align:center;color:#fff;padding:20px}.title{display:block;font-weight:300;font-size:3.5em;padding:10px 0}.subtitle{font-weight:500;font-size:1.5em;padding:10px 0}.subtitle-sm{font-style:italic;padding:10px 0}.text{padding:10px 0;font-size:1em;text-align:left;line-height:1.4em}.text-title{text-decoration:underline}.pre-name{background-color:#002b36;color:#2aa198;line-height:22px;font-weight:500;font-size:.8em}.footer,.pre-name{width:100%;padding:30px}.footer{background-color:#141c2f;color:#fff;text-align:right}</style>
+    <title data-n-head="true">Dmitriy Gurinenko | Frontend developer | React, Vue</title><meta data-n-head="true" charset="utf-8"><meta data-n-head="true" name="viewport" content="width=device-width,initial-scale=1"><meta data-n-head="true" data-hid="description" name="description" content="Dmitriy Gurinenko CV"><link data-n-head="true" rel="icon" type="image/x-icon" href="/favicon.ico"><link rel="preload" href="/_nuxt/796cbd592bd21160a881.js" as="script"><link rel="preload" href="/_nuxt/ac1ba917468fd6f42892.js" as="script"><link rel="preload" href="/_nuxt/822bb2e6f583485ee571.js" as="script"><link rel="preload" href="/_nuxt/9402ef9103a7109bf455.js" as="script"><style data-vue-ssr-id="fd547dac:0 371b8fbf:0 d4be674c:0">.nuxt-progress{position:fixed;top:0;left:0;right:0;height:2px;width:0;transition:width .2s,opacity .4s;opacity:1;background-color:#efc14e;z-index:999999}html{font-family:Quicksand,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;font-size:16px;word-spacing:1px;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;box-sizing:border-box;background-color:#35495e}*,:after,:before{box-sizing:border-box;margin:0}a{text-decoration:none;color:inherit}.container{min-height:100vh;display:flex;justify-content:center;align-items:center;text-align:center;color:#fff;padding:20px}.title{display:block;font-weight:300;font-size:3.5em;padding:5px 0}.subtitle{font-weight:500;font-size:1.5em;padding:5px 0}.subtitle-sm{font-style:italic;padding:10px 0;text-align:right}.text{padding:10px 0;font-size:1em;text-align:left;line-height:1.4em}.text-title{text-decoration:underline}.pre-name{width:100%;background-color:#002b36;color:#2aa198;padding:30px;line-height:22px;font-weight:500;font-size:.8em}.header-footer{width:100%;background-color:#141c2f;color:#fff;padding:30px;text-align:right}.button-translate{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;margin-top:15px;color:#fff;display:inline-block;padding:7px 10px;border:2px solid #fff;border-radius:5px;cursor:pointer}.button-translate:active{background-color:#fff;color:#000}.button-translate:hover{background-color:#fff;color:#000}.clip-circle{width:100px;-webkit-clip-path:circle(50px at center);clip-path:circle(50px at center)}</style>
   </head>
   <body data-n-head="">
-    <div id="__nuxt" data-server-rendered="true"><div class="nuxt-progress" style="width:0%;height:2px;background-color:#3b8070;opacity:0"></div><div id="__layout"><div><div><section class="container"><div><h1 class="title">
-        Dmitriy Gurinenko
-      </h1><div class="subtitle">
-        Frontend developer / QA engineer
-      </div><div class="subtitle-sm">
-        Ukraine - Indonesia - Montenegro - Estonia <br>
-        +380 63 1105252 / dmitriy.gurinenko@gmail.com <br>
-        married, 2 sons <br></div><div class="text">
+    <div data-server-rendered="true" id="__nuxt"><div class="nuxt-progress" style="width:0%;height:2px;background-color:#3b8070;opacity:0"></div><div id="__layout"><div><div><div class="header-footer"><img src="/_nuxt/img/7c24ba1.jpg" alt="dmydry" class="clip-circle"> <h1 class="title">
+      Dmitriy Gurinenko
+    </h1> <div class="subtitle">
+      Frontend developer / QA engineer
+    </div> <div class="subtitle-sm">
+      Ukraine - Indonesia - Montenegro - Estonia <br>
+      +380 63 1105252 / dmitriy.gurinenko@gmail.com <br>
+      30 years, married, 2 sons <br></div></div> <section class="container"><div><div class="text">
         IT Specialist: 8 years <br>
         COO of IT Company: 4 years<br>
         Entrepreneur: 4 years <br>
         Frontend developer and QA engineer: 2 years
-      </div><div class="text"><span class="text-title">Programming</span><br>
-        Javascript: ES6/ES7, Node, Express, React, Redux, Vue, Nuxt, Webpack, Mongo, Moment, Babel, Puppeteer<br><br><span class="text-title">System administration</span><br>
+      </div> <div class="text"><span class="text-title">Programming</span><br>
+        Javascript: ES6/ES7, Node, Express, React, Redux, Vue, Nuxt, Webpack, Mongo, Moment, Babel, Puppeteer<br><br> <span class="text-title">System administration</span><br>
         OS: Linux, Centos, FreeBSD, Gentoo Linux, Ubuntu, Microsoft Windows Server<br>
         Virtualisation: VMWare, Vbox<br>
         Databases: MySQL, PostgreSQL<br>
         Web/Mail: Tomcat, LAMP, Apache, Nginx, IIS, Sendmail, QMail, Postfix, Courier IMAP, POP3<br>
         Network Services: ISP Software, SSH, DNS/BIND, NFS, NIS, Samba, rsync, rdist, DHCP, Telnet, FTP<br>
-        Hardware: HP, IBM, Cisco<br><br><span class="text-title">￼￼￼￼Operational management</span><br>
+        Hardware: HP, IBM, Cisco<br><br> <span class="text-title">￼￼￼￼Operational management</span><br>
         ­Strategic development B2C, B2B<br>
         Marketing and promotional campaigns<br>
         ­Financial forecasting and analysis<br>
         ­Development and implementation of KPI system<br>
-        ­Optimization of organizational structure and management<br><br><span class="subtitle">Professional Experience:</span><br><br><span class="text-title">Betmaster</span><br>
+        ­Optimization of organizational structure and management<br><br> <span class="subtitle">Professional Experience:</span><br><br> <span class="text-title">Betmaster</span><br>
         https://betmaster.com<br>
         Frontend developer<br>
         Montenegro - Estonia<br>
-        August 2017 - Present<br><br><span class="text-title">Kindbeetle</span><br>
+        August 2017 - Present<br><br> <span class="text-title">Kindbeetle</span><br>
         http://kindbeetle.ru/<br>
         QA engineer<br>
         Indonesia, Bali<br>
-        April 2016 - August 2017<br><ul><li>￼￼￼￼Kinbeetle Automation API development (company's own framework for human readable tests)<li>Full cycle automation selenium web tests development<li>Full cycle automation appium mobile (ios & android) tests development<li>Continious cloud integration (browserstack, saucelabs)<li>Projects frontend minor bug fixes and improvements (React / React­native)</ul><br><span class="text-title">BikeHouse Bali</span><br>
+        April 2016 - August 2017<br> <ul><li>￼￼￼￼Kinbeetle Automation API development (company's own framework for human readable tests)</li> <li>Full cycle automation selenium web tests development</li> <li>Full cycle automation appium mobile (ios & android) tests development</li> <li>Continious cloud integration (browserstack, saucelabs)</li> <li>Projects frontend minor bug fixes and improvements (React / React­native)</li></ul> <br> <span class="text-title">BikeHouse Bali</span><br>
         https://balibikehouse.com/<br>
         Co founder / CEO<br>
         Indonesia, Bali<br>
-        November 2014 - Present<br><ul><li>￼￼￼￼Business processes development<li>Marketing<li>Website development<li>Workflow control<li>Customer relationships</ul><br><span class="text-title">Innovative Solutions</span><br>
+        November 2014 - Present<br> <ul><li>￼￼￼￼Business processes development</li> <li>Marketing</li> <li>Website development</li> <li>Workflow control</li> <li>Customer relationships</li></ul> <br> <span class="text-title">Innovative Solutions</span><br>
         http://innovativesolutions.com.ua/<br>
         COO<br>
         Ukraine, Kiev<br>
-        April 2011 - August 2014<br><ul><li>￼￼￼Control main company activities<li>Management of heads of 8 departments (Sales, Development, Support, Global marketing, PR, HR)<li>Operational document flow<li>Financial analytics and forecasting<li>Development and implementation of new sales strategies, technologies, business models<li>Management of new remote educational project<li>Constant work with key partners</ul><br><span class="text-title">Innovative Solutions</span><br>
+        April 2011 - August 2014<br> <ul><li>￼￼￼Control main company activities</li> <li>Management of heads of 8 departments (Sales, Development, Support, Global marketing, PR, HR)</li> <li>Operational document flow</li> <li>Financial analytics and forecasting</li> <li>Development and implementation of new sales strategies, technologies, business models</li> <li>Management of new remote educational project</li> <li>Constant work with key partners</li></ul> <br> <span class="text-title">Innovative Solutions</span><br>
         http://innovativesolutions.com.ua/<br>
         Co founder / System Administrator<br>
         Ukraine, Kiev<br>
-        February 2010 - April 2011<br><ul><li>Company servers setup and maintain Corporate website development<li>Main partners and customers relationships Technical tasks flow for remote workers<li>Control and evaluation produced web applications</ul><br><span class="text-title">RCS Components</span><br>
+        February 2010 - April 2011<br> <ul><li>Company servers setup and maintain Corporate website development</li> <li>Main partners and customers relationships Technical tasks flow for remote workers</li> <li>Control and evaluation produced web applications</li></ul> <br> <span class="text-title">RCS Components</span><br>
         http://www.rcscomponents.kiev.ua/<br>
         Vice Head of Integration Services<br>
         Ukraine, Kiev<br>
-        June 2009 - February 2010<br><ul><li>Development web integration services for main partners Support and installation of GPS monitoring equipment<li>Management of technical support team<li>Analysis of tracking data flow<li>Analysis of support ticket system Complex reports of support department</ul><br><span class="text-title">RCS Components</span><br>
+        June 2009 - February 2010<br> <ul><li>Development web integration services for main partners Support and installation of GPS monitoring equipment</li> <li>Management of technical support team</li> <li>Analysis of tracking data flow</li> <li>Analysis of support ticket system Complex reports of support department</li></ul> <br> <span class="text-title">RCS Components</span><br>
         http://www.rcscomponents.kiev.ua/<br>
         System Administrator<br>
         Ukraine, Kiev<br>
-        March 2006 - June 2009<br><ul><li>Support and maintain corporate network Active Directory, Network equipment (Cisco)<li>Corporate Security<li>3 Remote offices VPN Corporate Servers (HP, IBM)<li>Corporate Websites</ul><br><span class="subtitle">Education:</span><br><br>
+        March 2006 - June 2009<br> <ul><li>Support and maintain corporate network Active Directory, Network equipment (Cisco)</li> <li>Corporate Security</li> <li>3 Remote offices VPN Corporate Servers (HP, IBM)</li> <li>Corporate Websites</li></ul> <br> <span class="subtitle">Education:</span><br><br>
         ECOMAN University<br>
         http://ecoman­university.kiev.ua/<br>
         Ukraine, Kiev 2009<br>
-        Master's Degree in Business Management and Administration<br></div></div></section><div class="pre-name">
-    01101100 01101001 01101011 01100101 00100000 01110100 01101111 00100000 01110100 01110010 01100001 01110110 01100101 01101100 00100000 01101101 01101111 01110010 01100101 00100000 01110100 01101000 01100001 01101110 00100000 01100001 01101110 01111001 01110100 01101000 01101001 01101110 01100111 00100000 01100101 01101100 01110011 01100101 
-  </div><div class="footer">
-    © 2018 <a href="https://github.com/dmydry">dmydry</a></div></div></div></div></div><script type="text/javascript">window.__NUXT__={layout:"default",data:[{}],error:null,serverRendered:!0}</script><script defer src="/_nuxt/manifest.d40384a9762d0ab45720.js"></script><script defer src="/_nuxt/layouts/default.8d687e73f2b8f4ac7f7b.js"></script><script defer src="/_nuxt/pages/index.0695042a9fb7a143a037.js"></script><script defer src="/_nuxt/vendor.0cb6c030cbf371752ee4.js"></script><script defer src="/_nuxt/app.376db6c1aa2917c7ea83.js"></script>
-  
-
+        Master's Degree in Business Management and Administration<br></div></div></section> <div class="pre-name">
+    01001001 00100000 01101100 01101001 01101011 01100101 00100000 01110100 01101111 00100000 01100011 01101111 01100100 01100101 00100000 01100001 01101110 01100100 00100000 01110100 01110010 01100001 01110110 01100101 01101100 00100000 01101101 01101111 01110010 01100101 00100000 01110100 01101000 01100001 01101110 00100000 01100001 01101110 01111001 01110100 01101000 01101001 01101110 01100111 00100000 01100101 01101100 01110011 01100101 
+    <br> <div class="button-translate">
+      translate()
+    </div></div> <div class="header-footer">
+    © 2018 <a href="https://github.com/dmydry">dmydry</a></div></div></div></div></div><script>window.__NUXT__={layout:"default",data:[{}],error:null,serverRendered:!0}</script><script src="/_nuxt/796cbd592bd21160a881.js" defer></script><script src="/_nuxt/9402ef9103a7109bf455.js" defer></script><script src="/_nuxt/ac1ba917468fd6f42892.js" defer></script><script src="/_nuxt/822bb2e6f583485ee571.js" defer></script>
+  </body>
+</html>
